hphp/test/slow/include-error2.php.expectf

Fatal error: require(non-existing-file.php): File not found in %s/include-error2.php on line 2
